# TuringDB

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  TODO  about.toml  arch.md  license.txt
.github/workflows/: rust.yml
ClientTester/: Cargo.toml  do.sh
ClientTester/src/: main.rs
TuringDB/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md
TuringDB-Client/: Cargo.toml
TuringDB-Helpers/: Cargo.toml  README.md
TuringDB-Helpers/src/: commands.rs  db.rs  document.rs  field.rs  lib.rs  methods.rs  repo.rs  traits.rs
TuringDB-Server/: Cargo.toml
TuringDB-Server/src/: commands.rs  db_query.rs  document_query.rs  errors.rs  field_query.rs  main.rs  repo_query.rs  server.rs
TuringDB/TuringDB_Repo/db_foo0/doc_foo0_0/: db  snap.0000000000000370
TuringDB/src/: engine.rs  global.rs  lib.rs  main.rs
TuringDB/src/crypto/: aead_chacha8.rs  errors.rs  mod.rs  traits.rs
TuringDB/src/t_engine/: database.rs  documents.rs  engine.rs  fields.rs  mod.rs  schema.rs
TuringFeeds/: Cargo.toml  README.md
TuringFeeds/TuringFeeds/db0/doc1_db0/: snap.0000000000000045
TuringFeeds/TuringFeedsRepo/db0/doc4_db0/: db
TuringFeeds/src/: engine.rs  errors.rs  global.rs  lib.rs  main.rs
TuringFeeds/src/loggers/: errors.rs  mod.rs
TuringFeedsHelpers/: Cargo.toml  README.md
TuringFeedsHelpers/src/: commands.rs  errors.rs  lib.rs  methods.rs
TuringFeedsServer/: Cargo.toml
TuringFeedsServer/src/: main.rs  server.rs
src/: default_engine.rs  engine.rs  errors.rs  global.rs  lib.rs
src/loggers/: errors.rs
