[package]
name = "turingdb-repo"
version = "2.0.0-beta.1"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"

[workspace]
members = [
	"TuringDB",
	"TuringDB-Helpers",
	"TuringDB-Server",
	"TuringDB-Client",
]


[lib]
name = "turingdb"
path = "TuringDB/src/lib.rs"

[[bin]]
name = "turingdb-client"
path = "TuringDB-Client/src/main.rs"

[[bin]]
name = "turingdb-server"
path = "TuringDB-Server/src/main.rs"

[dependencies]
bincode = "1.2.1"
custom_codes = "2.0.3"
tai64 = { version = "3.1.0", features = ["serde"] }
serde = { version = "1.0.112", features = ["derive"] }
sled = "0.32.0"
anyhow = "1.0.31"
smol = "0.1.18"
async-lock = "1.1.2"
futures = "0.3.5"
turingfeeds-helpers = "1.0.0-beta.1"
signal-msg = "0.2.1"
async-dup = "1.1.0"
dashmap = { version = "3.11.4", features = ["serde"] }
blocking = "0.4.6"
futures-lite = "0.1.1"
turingdb-helpers = { path = "./TuringDB-Helpers" }
async-trait = "0.1.36"
