[package]
name = "clienttester"
version = "0.1.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.4.0", features = ["attributes"] }
bincode = "1.2.1"
turingfeeds-helpers = { path = "../TuringFeedsHelpers" }
custom_codes = "1.2.4"
anyhow = "1.0.26"
serde = { version = "*", features = [ "derive" ]}