[package]
name = "turingdb-helpers"
version = "2.0.0-beta.2"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
description = "Document Database backed by sled"
homepage = "https://github.com/charleschege/TuringDB"
repository = "https://github.com/charleschege/TuringDB"
license = "Apache-2.0"
keywords = ["database", "sled", "embedded-database"]
categories = ["database", "embedded"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
custom_codes = "*"
bincode = "*"
anyhow = "*"
async-trait = "0.1.36"
tai64 = { version = "3.1.0", features = ["serde"] }