[package]
name = "turingdb-helpers"
version = "2.0.0-beta.4"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
description = "Document Database backed by sled"
homepage = "https://github.com/charleschege/TuringDB"
repository = "https://github.com/charleschege/TuringDB"
license = "Apache-2.0"
keywords = ["database", "sled", "embedded-database"]
categories = ["database", "embedded"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
custom_codes = { path = "../../custom_codes" }
bincode = "1.3.1"
anyhow = "1.0.32"
tai64 = { version = "3.1.0", features = ["serde"] }
