[package]
name = "turingdb-server"
version = "2.0.0-beta.4"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
description = "Document Database backed by sled"
homepage = "https://github.com/charleschege/TuringDB"
repository = "https://github.com/charleschege/TuringDB"
license = "Apache-2.0"
keywords = ["database", "sled", "embedded-database"]
categories = ["database", "embedded"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turingdb = { path = "../TuringDB" }
turingdb-helpers = { path = "../TuringDB-Helpers" }
custom_codes = "2.0.4"
tai64 = { version = "3.1.0", features = ["serde"] }
anyhow = "1.0.32"
yansi = "0.5.0"
smol = "0.3.3"
simple-signal = "1.1.1"
async-dup = "1.2.1"
futures = "0.3.5"
bincode = "1.2.1"
serde = { version = "1.0.114", features = ["derive"] }
async-net = "0.1.2"
futures-lite = "0.1.10"
