[package]
name = "turingdb"
version = "2.0.0-beta.4"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
description = "Document Database backed by sled"
homepage = "https://github.com/charleschege/TuringDB"
repository = "https://github.com/charleschege/TuringDB"
license = "Apache-2.0"
keywords = ["database", "sled", "embedded-database"]
categories = ["database", "embedded"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
tai64 = { version = "3.1.0", features = ["serde"] }
serde = { version = "1.0.114", features = ["derive"] }
sled = "0.32.0"
anyhow = "1.0.32"
async-lock = "1.1.4"
dashmap = { version = "3.11.7", features = ["serde"] }
blocking = "0.5.0"
custom_codes = "2.0.4"
