[package]
name = "turingdb"
version = "2.0.0-beta.4"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
description = "Document Database backed by sled"
homepage = "https://github.com/charleschege/TuringDB"
repository = "https://github.com/charleschege/TuringDB"
license = "Apache-2.0"
keywords = ["database", "sled", "embedded-database"]
categories = ["database", "embedded"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
tai64 = { version = "3.1.0", features = ["serde"] }
serde = { version = "1.0.117", features = ["derive"] }
sled = "0.34.6"
anyhow = "1.0.34"
async-lock = "2.3.0"
dashmap = { version = "3.11.10", features = ["serde"] }
blocking = "1.0.2"
custom_codes = "2.0.4"
async-fs = "1.5.0"
futures-lite = "1.11.2"
