[package]
name = "turingdb"
version = "2.0.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
description = "Document Database backed by sled"
homepage = "https://github.com/charleschege/TuringDB"
repository = "https://github.com/charleschege/TuringDB"
license = "LicenseRef-Business-Source-Licence-v1.1-Proprietary"
keywords = ["database", "sled", "embedded-database"]
categories = ["database", "embedded"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.2"
tai64 = { version = "3.1.0", features = ["serde"] }
serde = { version = "1.0.124", features = ["derive"] }
sled = "0.34.6"
anyhow = "1.0.38"
async-lock = "2.3.0"
dashmap = { version = "4.0.2", features = ["serde"] }
blocking = "1.0.2"
async-fs = "1.5.0"
futures-lite = "1.11.3"
directories = "3.0.1"
async-executor = "1.4.0"
seahash = "4.1.0"
camino = "1.0.3"
