[package]
name = "turingfeeds"
version = "0.1.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5.0", features = ["attributes", "crossbeam-channel"] }
rand = "0.7.3"
bincode = "1.2.1"
custom_codes = "1.2.6"
timelite = "1.0.4"
tai64 = { version = "3.1.0", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
turingfeeds-helpers = { path = "../TuringFeedsHelpers" }
sled = "0.31.0"
ron = "0.5.1"
lazy_static = "1.4.0"
evmap = "9.0.0-beta.2"
anyhow = "1.0.26"
yansi = "0.5.0"
