[package]
name = "turingfeeds-helpers"
version = "0.1.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.4.0", features = ["attributes"] }
walkdir = "2.2.9"
ron = "0.5.1"
serde = { version = "1.0.14", features = ["derive"] }
bincode = "1.2.1"
custom_codes = { path = "../../custom_codes" }