[package]
name = "turingfeeds-helpers"
version = "1.0.0-beta.1"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.14", features = ["derive"] }
custom_codes = "1.2.5"
bincode = "1.2.1"
anyhow = "1.0.26"
async-std = { version = "1.5.0", features = ["attributes"] }